--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
           <h2 class="visually-hidden">Skritii Zagolovok</h2>
           <ul class="conteiner-ul">
             <li class="lii">
+              <div class="ics2">
+                <svg class="icon-s2">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">Strategy</h3>
               <p class="prg">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +80,11 @@
             </li>
 
             <li class="lii">
+              <div class="ics2">
+                <svg class="icon-s2">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Punctuality</h3>
               <p class="prg">
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +93,11 @@
             </li>
 
             <li class="lii">
+              <div class="ics2">
+                <svg class="icon-s2">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">Diligence</h3>
               <p class="prg">
                 Research and confirm brands that present the strongest digital
@@ -91,6 +106,11 @@
             </li>
 
             <li class="lii">
+              <div class="ics2">
+                <svg class="icon-s2">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Technologies</h3>
               <p class="prg">
                 Design practice focused on digital experiences. We bring forth a
@@ -111,6 +131,31 @@
               <div class="team-div">
                 <h3 class="title">Mark Guerrero</h3>
                 <p class="prg">Product Designer</p>
+                <div class="ics3">
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
 
@@ -119,6 +164,31 @@
               <div class="team-div">
                 <h3 class="title">Tom Ford</h3>
                 <p class="prg">Frontend Developer</p>
+                <div class="ics3">
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
 
@@ -127,6 +197,31 @@
               <div class="team-div">
                 <h3 class="title">Camila Garcia</h3>
                 <p class="prg">Marketing</p>
+                <div class="ics3">
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
 
@@ -135,6 +230,31 @@
               <div class="team-div">
                 <h3 class="title">Daniel Wilson</h3>
                 <p class="prg">UI Designer</p>
+                <div class="ics3">
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+
+                  <a class="ics3-linc">
+                    <svg class="icon-s3">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
@@ -213,13 +333,43 @@
     <!-- Футер сторінки -->
     <footer class="foot">
       <div class="foot-cl container">
-        <a class="logo-foot" href="./index.html">
-          Web<span class="span-f">Studio</span>
-        </a>
-        <p class="foot-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div>
+          <a class="logo-foot" href="./index.html">
+            Web<span class="span-f">Studio</span>
+          </a>
+          <p class="foot-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="foot-soc">
+          <p>Social media</p>
+          <div class="icft">
+            <a class="icft-linc">
+              <svg class="icon-ft">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+
+            <a class="icft-linc">
+              <svg class="icon-ft">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+
+            <a class="icft-linc">
+              <svg class="icon-ft">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+
+            <a class="icft-linc">
+              <svg class="icon-ft">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
