--- a/index.html
+++ b/index.html
@@ -267,7 +267,14 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="conteiner-portfolio-ul">
             <li class="liii">
-              <img src="./images/1BankingApp.jpg" alt="Banking" width="360" />
+              <div class="p-port">
+                <img src="./images/1BankingApp.jpg" alt="Banking" width="360" />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="lii-div">
                 <h3 class="title">Banking App</h3>
                 <p class="portfolio-prg">App</p>
@@ -275,11 +282,18 @@
             </li>
 
             <li class="liii">
-              <img
-                src="./images/2CashlessPayment.jpg"
-                alt="Cashless"
-                width="360"
-              />
+              <div class="p-port">
+                <img
+                  src="./images/2CashlessPayment.jpg"
+                  alt="Cashless"
+                  width="360"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="lii-div">
                 <h3 class="title">Cashless Payment</h3>
                 <p class="portfolio-prg">Marketing</p>
@@ -287,11 +301,18 @@
             </li>
 
             <li class="liii">
-              <img
-                src="./images/3MeditationApp.jpg"
-                alt="Meditation"
-                width="360"
-              />
+              <div class="p-port">
+                <img
+                  src="./images/3MeditationApp.jpg"
+                  alt="Meditation"
+                  width="360"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="lii-div">
                 <h3 class="title">Meditation App</h3>
                 <p class="portfolio-prg">App</p>
@@ -299,7 +320,14 @@
             </li>
 
             <li class="liii">
-              <img src="./images/4TaxiService.jpg" alt="Taxi" width="360" />
+              <div class="p-port">
+                <img src="./images/4TaxiService.jpg" alt="Taxi" width="360" />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="lii-div">
                 <h3 class="title">Taxi Service</h3>
                 <p class="portfolio-prg">Marketing</p>
@@ -307,11 +335,18 @@
             </li>
 
             <li class="liii">
-              <img
-                src="./images/5ScreenIllustrations.jpg"
-                alt="Screen"
-                width="360"
-              />
+              <div class="p-port">
+                <img
+                  src="./images/5ScreenIllustrations.jpg"
+                  alt="Screen"
+                  width="360"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="lii-div">
                 <h3 class="title">Screen Illustrations</h3>
                 <p class="portfolio-prg">Design</p>
@@ -319,7 +354,18 @@
             </li>
 
             <li class="liii">
-              <img src="./images/6OnlineCourses.jpg" alt="Online" width="360" />
+              <div class="p-port">
+                <img
+                  src="./images/6OnlineCourses.jpg"
+                  alt="Online"
+                  width="360"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="lii-div">
                 <h3 class="title">Online Courses</h3>
                 <p class="portfolio-prg">Marketing</p>
