--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </a>
 
           <ul class="nav-ul">
-            <li><a class="link" href="./index.html">Studio</a></li>
+            <li><a class="link current" href="./index.html">Studio</a></li>
             <li><a class="link" href="">Portfolio</a></li>
             <li><a class="link" href="">Contacts</a></li>
           </ul>
