--- a/index.html
+++ b/index.html
@@ -131,31 +131,39 @@
               <div class="team-div">
                 <h3 class="title">Mark Guerrero</h3>
                 <p class="prg">Product Designer</p>
-                <div class="ics3">
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
+                <ul>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -164,31 +172,39 @@
               <div class="team-div">
                 <h3 class="title">Tom Ford</h3>
                 <p class="prg">Frontend Developer</p>
-                <div class="ics3">
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
+                <ul>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -197,31 +213,39 @@
               <div class="team-div">
                 <h3 class="title">Camila Garcia</h3>
                 <p class="prg">Marketing</p>
-                <div class="ics3">
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
+                <ul>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -230,31 +254,39 @@
               <div class="team-div">
                 <h3 class="title">Daniel Wilson</h3>
                 <p class="prg">UI Designer</p>
-                <div class="ics3">
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
+                <ul>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                  <a class="ics3-linc">
-                    <svg class="icon-s3">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                  <li class="ics3">
+                    <a class="ics3-linc">
+                      <svg class="icon-s3">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -269,11 +301,11 @@
             <li class="liii">
               <div class="p-port">
                 <img src="./images/1BankingApp.jpg" alt="Banking" width="360" />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="lii-div">
                 <h3 class="title">Banking App</h3>
@@ -288,11 +320,11 @@
                   alt="Cashless"
                   width="360"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="lii-div">
                 <h3 class="title">Cashless Payment</h3>
@@ -307,11 +339,11 @@
                   alt="Meditation"
                   width="360"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="lii-div">
                 <h3 class="title">Meditation App</h3>
@@ -322,11 +354,11 @@
             <li class="liii">
               <div class="p-port">
                 <img src="./images/4TaxiService.jpg" alt="Taxi" width="360" />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="lii-div">
                 <h3 class="title">Taxi Service</h3>
@@ -341,11 +373,11 @@
                   alt="Screen"
                   width="360"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="lii-div">
                 <h3 class="title">Screen Illustrations</h3>
@@ -360,11 +392,11 @@
                   alt="Online"
                   width="360"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="lii-div">
                 <h3 class="title">Online Courses</h3>
@@ -379,7 +411,7 @@
     <!-- Футер сторінки -->
     <footer class="foot">
       <div class="foot-cl container">
-        <div>
+        <div class="foot-div">
           <a class="logo-foot" href="./index.html">
             Web<span class="span-f">Studio</span>
           </a>
@@ -390,31 +422,39 @@
         </div>
         <div class="foot-soc">
           <p>Social media</p>
-          <div class="icft">
-            <a class="icft-linc">
-              <svg class="icon-ft">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
+          <ul class="foot-socli">
+            <li class="icft">
+              <a class="icft-linc">
+                <svg class="icon-ft">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
 
-            <a class="icft-linc">
-              <svg class="icon-ft">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
+            <li class="icft">
+              <a class="icft-linc">
+                <svg class="icon-ft">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
 
-            <a class="icft-linc">
-              <svg class="icon-ft">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
+            <li class="icft">
+              <a class="icft-linc">
+                <svg class="icon-ft">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
 
-            <a class="icft-linc">
-              <svg class="icon-ft">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </div>
+            <li class="icft">
+              <a class="icft-linc">
+                <svg class="icon-ft">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
