--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h2 class="visually-hidden">Skritii Zagolovok</h2>
           <ul class="conteiner-ul">
             <li class="lii">
-              <div class="ics2">
+              <div class="icss">
                 <svg class="icon-s2">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
@@ -80,8 +80,8 @@
             </li>
 
             <li class="lii">
-              <div class="ics2">
-                <svg class="icon-s2">
+              <div class="icss">
+                <svg class="icon-ss">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -93,8 +93,8 @@
             </li>
 
             <li class="lii">
-              <div class="ics2">
-                <svg class="icon-s2">
+              <div class="icss">
+                <svg class="icon-ss">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -106,8 +106,8 @@
             </li>
 
             <li class="lii">
-              <div class="ics2">
-                <svg class="icon-s2">
+              <div class="icss">
+                <svg class="icon-ss">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -132,33 +132,33 @@
                 <h3 class="title">Mark Guerrero</h3>
                 <p class="prg">Product Designer</p>
                 <ul>
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -173,33 +173,33 @@
                 <h3 class="title">Tom Ford</h3>
                 <p class="prg">Frontend Developer</p>
                 <ul>
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -214,33 +214,33 @@
                 <h3 class="title">Camila Garcia</h3>
                 <p class="prg">Marketing</p>
                 <ul>
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -255,33 +255,33 @@
                 <h3 class="title">Daniel Wilson</h3>
                 <p class="prg">UI Designer</p>
                 <ul>
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="ics3">
-                    <a class="ics3-linc">
-                      <svg class="icon-s3">
+                  <li class="icst">
+                    <a class="icst-linc">
+                      <svg class="icon-st">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
