--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <div class="team-div">
                 <h3 class="title">Mark Guerrero</h3>
                 <p class="prg">Product Designer</p>
-                <ul>
+                <ul class="our-team-soc">
                   <li class="icst">
                     <a class="icst-linc">
                       <svg class="icon-st">
@@ -172,7 +172,7 @@
               <div class="team-div">
                 <h3 class="title">Tom Ford</h3>
                 <p class="prg">Frontend Developer</p>
-                <ul>
+                <ul class="our-team-soc">
                   <li class="icst">
                     <a class="icst-linc">
                       <svg class="icon-st">
@@ -213,7 +213,7 @@
               <div class="team-div">
                 <h3 class="title">Camila Garcia</h3>
                 <p class="prg">Marketing</p>
-                <ul>
+                <ul class="our-team-soc">
                   <li class="icst">
                     <a class="icst-linc">
                       <svg class="icon-st">
@@ -254,7 +254,7 @@
               <div class="team-div">
                 <h3 class="title">Daniel Wilson</h3>
                 <p class="prg">UI Designer</p>
-                <ul>
+                <ul class="our-team-soc">
                   <li class="icst">
                     <a class="icst-linc">
                       <svg class="icon-st">
