--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <ul class="conteiner-ul">
             <li class="lii">
               <div class="icss">
-                <svg class="icon-s2">
+                <svg class="icon-s2" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -81,7 +81,7 @@
 
             <li class="lii">
               <div class="icss">
-                <svg class="icon-ss">
+                <svg class="icon-ss" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -94,7 +94,7 @@
 
             <li class="lii">
               <div class="icss">
-                <svg class="icon-ss">
+                <svg class="icon-ss" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -107,7 +107,7 @@
 
             <li class="lii">
               <div class="icss">
-                <svg class="icon-ss">
+                <svg class="icon-ss" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -134,7 +134,7 @@
                 <ul class="our-team-soc">
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -142,7 +142,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -150,7 +150,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -158,7 +158,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -175,7 +175,7 @@
                 <ul class="our-team-soc">
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -183,7 +183,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -191,7 +191,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -199,7 +199,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -216,7 +216,7 @@
                 <ul class="our-team-soc">
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -224,7 +224,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -232,7 +232,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -240,7 +240,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -257,7 +257,7 @@
                 <ul class="our-team-soc">
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -265,7 +265,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -273,7 +273,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -281,7 +281,7 @@
 
                   <li class="icst">
                     <a class="icst-linc">
-                      <svg class="icon-st">
+                      <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -425,7 +425,7 @@
           <ul class="foot-socli">
             <li class="icft">
               <a class="icft-linc">
-                <svg class="icon-ft">
+                <svg class="icon-ft" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -433,7 +433,7 @@
 
             <li class="icft">
               <a class="icft-linc">
-                <svg class="icon-ft">
+                <svg class="icon-ft" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -441,7 +441,7 @@
 
             <li class="icft">
               <a class="icft-linc">
-                <svg class="icon-ft">
+                <svg class="icon-ft" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -449,7 +449,7 @@
 
             <li class="icft">
               <a class="icft-linc">
-                <svg class="icon-ft">
+                <svg class="icon-ft" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
