--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
           </p>
         </div>
         <div class="foot-soc">
-          <p>Social media</p>
+          <p class="foot-p">Social media</p>
           <ul class="foot-socli">
             <li class="icft">
               <a class="icft-linc">
