--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <p class="prg">Product Designer</p>
                 <ul class="our-team-soc">
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -141,7 +141,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -149,7 +149,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -157,7 +157,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -174,7 +174,7 @@
                 <p class="prg">Frontend Developer</p>
                 <ul class="our-team-soc">
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -182,7 +182,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -190,7 +190,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -198,7 +198,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -215,7 +215,7 @@
                 <p class="prg">Marketing</p>
                 <ul class="our-team-soc">
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -223,7 +223,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -231,7 +231,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -239,7 +239,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -256,7 +256,7 @@
                 <p class="prg">UI Designer</p>
                 <ul class="our-team-soc">
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -264,7 +264,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
@@ -272,7 +272,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -280,7 +280,7 @@
                   </li>
 
                   <li class="icst">
-                    <a class="icst-linc">
+                    <a class="icst-linc" href="">
                       <svg class="icon-st" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -424,7 +424,7 @@
           <p class="foot-p">Social media</p>
           <ul class="foot-socli">
             <li class="icft">
-              <a class="icft-linc">
+              <a class="icft-linc" href="">
                 <svg class="icon-ft" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
@@ -432,7 +432,7 @@
             </li>
 
             <li class="icft">
-              <a class="icft-linc">
+              <a class="icft-linc" href="">
                 <svg class="icon-ft" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
@@ -440,7 +440,7 @@
             </li>
 
             <li class="icft">
-              <a class="icft-linc">
+              <a class="icft-linc" href="">
                 <svg class="icon-ft" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
@@ -448,7 +448,7 @@
             </li>
 
             <li class="icft">
-              <a class="icft-linc">
+              <a class="icft-linc" href="">
                 <svg class="icon-ft" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
